# ferrosa-docs

./: .gitignore  README.md
.github/workflows/: ci.yml  pages.yml  sync-ferrosa.yml  sync-versions.yml
docs/: CNAME  brand.html  index.html  index.md  install-memory.sh  install.sh  setup-memory.sh  setup.sh
docs/database/: clustering.html  cql-compatibility.html  cypher.html  getting-started.html  index.html  migration.html  postgres.html  sparql.html  vector-indexes.html
docs/database/examples/: advanced-aggregation.html  arrow-flight.html  cluster-scaling.html  cluster-setup.html  (+18 more)
docs/ferrosa-memory/: brand.html  compare.html  design-system.html  getting-started.html  getting-started.md  how-it-works.html  how-to-use.html  index.html  tools.html
docs/forge/: index.html
scripts/: check-site.py  generate-example-docs.sh  sync-from-ferrosa.sh  update-site-versions.sh
sources/ferrosa/examples/advanced-aggregation/guest/: Cargo.toml  README.md
sources/ferrosa/examples/advanced-aggregation/guest-coalesce/: Cargo.toml
sources/ferrosa/examples/advanced-aggregation/guest-coalesce/src/: bindings.rs  lib.rs
sources/ferrosa/examples/advanced-aggregation/guest-coalesce/wit/: ferrosa-udf.wit
sources/ferrosa/examples/advanced-aggregation/guest-uda/: Cargo.toml
sources/ferrosa/examples/advanced-aggregation/guest-uda/src/: bindings.rs  histogram.rs  lib.rs  weighted_avg.rs
sources/ferrosa/examples/advanced-aggregation/guest-uda/wit/: ferrosa-udf.wit
sources/ferrosa/examples/advanced-aggregation/guest/src/: lib.rs
specs/: docs-repository-migration.md
(+122 files in other folders)
