[workspace]

[package]
name = "ferrosa-udf-guest"
version = "0.1.0"
edition = "2021"
description = "Example scalar UDF guest crate compiled to WASM Component Model"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.41", default-features = false, features = ["macros", "realloc"] }

[package.metadata.component]
package = "ferrosa:udf-guest"
target = { path = "wit", world = "udf" }
